Fix for meta og:description.

--- a/views/index.pug
+++ b/views/index.pug
@@ -10,7 +10,8 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
     meta(property="og:site_name", content="Pollen")
     meta(property="og:url", content="https://pollen.dhedegaard.dk/")
     meta(property="og:title", content="Pollen")
-    meta(property="og:description", content="{{ range .output }}{{ .CityName }} - {{ end }}")
+    - const cityStr = data.map(e => `${e.city}: ${e.forecast}`).join(' - ')
+    meta(property="og:description", content=cityStr)
     meta(property="og:image", content="/static/favicon.png")
     title Pollen
     link(rel="shortcut icon", href="/static/favicon.ico")
