Added graphql based API, as a replacement for the REST based API

--- a/views/index.pug
+++ b/views/index.pug
@@ -53,4 +53,4 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
           if cacheTimestamp
             span.text-nowrap Cache timestamp: <b>#{cacheTimestamp.toUTCString()}</b>.
             br
-          span.text-nowrap API available <a href="/api">here</a>, get the source on <a href="https://github.com/dhedegaard/pollen">Github</a>
+          span.text-nowrap API available <a href="/graphql">here</a>, get the source on <a href="https://github.com/dhedegaard/pollen">Github</a>
