--- a/views/index.pug
+++ b/views/index.pug
@@ -19,40 +19,40 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
     link(rel="apple-touch-icon", href="/static/favicon.png")
     link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css", integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T", crossorigin="anonymous")
   body
-  nav.navbar.navbar-light(style="background-color: #acf8ac;")
+    nav.navbar.navbar-light(style="background-color: #acf8ac;")
+      .container
+        span.navbar-brand.text-left
+          img(src="/static/favicon.png", width="30", height="30" class="d-inline-block align-top", alt="Pollen icon")
+          span Pollen
     .container
-      span.navbar-brand.text-left
-        img(src="/static/favicon.png", width="30", height="30" class="d-inline-block align-top", alt="Pollen icon")
-        span Pollen
-  .container
-    .row
-      each elem in data
+      .row
+        each elem in data
+          .col
+            .card
+              h5.card-header= elem.city
+              ul.list-group.list-group-flush
+                each val, index in elem.values
+                  li.list-group-item
+                    small #{index}: &nbsp;
+                    if val == null
+                      span.text-muted -
+                    else if typeof val === 'string'
+                      span.text-warning= val
+                    else if val < 1
+                      span.text-muted= val
+                    else if val < 21
+                      b.text-success= val
+                    else if val <= 51
+                      b.text-warning= val
+                    else
+                      b.text-danger= val
+                if elem.forecast
+                  li.list-group-item
+                    small.text-muted= elem.forecast
+      .row.text-right
         .col
-          .card
-            h5.card-header= elem.city
-            ul.list-group.list-group-flush
-              each val, index in elem.values
-                li.list-group-item
-                  small #{index}: &nbsp;
-                  if val == null
-                    span.text-muted -
-                  else if typeof val === 'string'
-                    span.text-warning= val
-                  else if val < 1
-                    span.text-muted= val
-                  else if val < 21
-                    b.text-success= val
-                  else if val <= 51
-                    b.text-warning= val
-                  else
-                    b.text-danger= val
-              if elem.forecast
-                li.list-group-item
-                  small.text-muted= elem.forecast
-    .row.text-right
-      .col
-        small.text-muted
-          if cacheTimestamp
-            span.text-nowrap Cache timestamp: <b>#{cacheTimestamp.toUTCString()}</b>.
-            br
-          span.text-nowrap API available <a href="/graphql">here</a>, get the source on <a href="https://github.com/dhedegaard/pollen">Github</a>
+          small.text-muted
+            if cacheTimestamp
+              span.text-nowrap Cache timestamp: <b>#{cacheTimestamp.toUTCString()}</b>.
+              br
+            span.text-nowrap API available <a href="/graphql">here</a>, get the source on <a href="https://github.com/dhedegaard/pollen-js">Github</a>
